<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">无纸化会议</string>
    <string name="login_version">V2.6</string>
    <string name="login_start_bottom">Copyright © 广州市保伦电子有限公司  ICP备18071201号-3</string>
    <string name="sign_cast_screen">签到投屏</string>
    <string name="sign_cancel_screen">取消投屏</string>
    <string name="login_set">设置</string>
    <string name="login_set_ip">IP地址:</string>
    <string name="login_set_ip_hint">请输入服务器IP地址</string>
    <string name="login_set_port"> 端口号:</string>
    <string name="login_set_port_hint"> 请输入服务器端口号</string>
    <string name="login_set_terminal"> 终端号:</string>
    <string name="login_set_terminal_hint"> 请输入终端号</string>
    <string name="save">保存</string>
    <string name="voted">已投票</string>
    <string name="not_vote">未投票</string>
    <string name="vote">投票</string>
    <string name="vote_countdown">投票倒计时:</string>
    <string name="look_over">查看</string>
    <string name="vote_one">单选</string>
    <string name="sure">确认</string>
    <string name="comment">备注</string>
    <string name="option">选项:</string>
    <string name="person">人</string>
    <string name="total">总计</string>
    <string name="has_voted">已投</string>
    <string name="not_voted">未投</string>
    <string name="details">详情</string>
    <string name="cast_screen">投屏</string>
    <string name="tea">茶水</string>
    <string name="pen">笔</string>
    <string name="paper">纸</string>
    <string name="microphone">麦克风</string>
    <string name="service_personal">服务人员</string>
    <string name="technicians">技术人员</string>
    <string name="else_requirement">其他</string>
    <string name="fuwu_edt_remind">请输入您需要的服务</string>
    <string name="send">发送</string>
    <string name="mine">我</string>
    <string name="system_notification">系统公告:</string>
    <string name="nopaperlessmeeting">无纸化会议系统</string>
    <string name="live_video">直播视频</string>
    <string name="on_demand_video">点播视频</string>
    <string name="file_waiting_download">等待下载</string>
    <string name="meeting_panben">V2.4.0</string>
    <string name="not_meeting_text">当前无会议!</string>
    <string name="meeting_back_login">返回登入页</string>
    <string name="switch_conference">切换会议</string>
    <string name="meeting_load_fail_no_mt">该会议已结束!</string>
    <string name="meeting_load_fail_no_mt_ti_shi">可切换会议，进入下一场会议</string>
    <string name="meeting_not_data">暂无数据</string>
    <string name="meeting_enter_text">进 入 会 议</string>
    <string name="meeting_jilu">会议记录</string>
    <string name="meeting_jilu_default_textsize">字号：9</string>
    <string name="meeting_jilu_build">新建</string>
    <string name="meeting_jilu_upload">上传</string>
    <string name="upload_list">上传列表</string>
    <string name="wait_upload">等待上传</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_file_lose">文件失效</string>
    <string name="uploading_file">正在上传</string>
    <string name="search_file_resume">请输入你要搜索文件的关键字</string>
    <string name="meeting_jilu_save">保存</string>
    <string name="save_suc_prompt">保存成功, 请到【查看批注】中查看</string>
    <string name="save_failed_prompt">图片本地保存失败</string>
    <string name="meeting_jilu_edit">编辑文档</string>
    <string name="meeting_jilu_delect">删除</string>
    <string name="meeting_jilu_back">返回</string>
    <string name="meeting_jilu_color_text">颜色：</string>
    <string name="meeting_jilu_remine_title">请输入标题</string>
    <string name="meeting_jilu_remine_content">请输入正文</string>
    <string name="in_progress">进行中</string>
    <string name="over">已结束</string>
    <string name="vote_num">人已投</string>
    <string name="mederator_control">会议控制</string>
    <string name="menu_zhujiang">我要主讲</string>
    <string name="menu_exit_zhujiang">退出主讲</string>
    <string name="menu_zhujiang_sharer"> 正在主讲..</string>
    <string name="menu_liulan">异步浏览</string>
    <string name="menu_genzong">跟踪主讲</string>
    <string name="menu_pizhu">手写批注</string>
    <string name="menu_screen">屏幕广播</string>
    <string name="menu_screen_close">关闭广播</string>
    <string name="menu_track_screen">跟踪广播</string>
    <string name="menu_track_screen_sharer"> 正在屏幕广播..</string>
    <string name="fuwu_remind">提示：请点击你想选择物品的图标。如需要别的服务请在输入框里输入然后点击发送,谢谢！</string>
    <string name="yiti_uploadtime">上传时间</string>
    <string name="yiti_uploadpeople">上传人</string>
    <string name="yiti_reporter_no_data">无</string>
    <string name="jizhong_welcome">欢迎界面</string>
    <string name="jizhong_message">会议信息</string>
    <string name="meeting_chat">会议交流</string>
    <string name="jizhong_people_name">显示人名</string>
    <string name="meeting_voting">会议投票</string>
    <string name="meeting_agenda">会议议题</string>
    <string name="meeting_material">临时资料</string>
    <string name="meeting_person">参会名单</string>
    <string name="meeting_service">会议服务</string>
    <string name="video_service">视频服务</string>
    <string name="issue_material">议题材料</string>
    <string name="view_comments">查看批注</string>
    <string name="sign_in_management">签到管理</string>
    <string name="voting_management">投票管理</string>
    <string name="topic_management">议题管理</string>
    <string name="meeting_slogan">会议标语</string>
    <string name="centralized_control">集中控制</string>
    <string name="electronic_whiteboard">电子白板</string>
    <string name="web_browsing">网络浏览</string>
    <string name="history_meeting">历史会议</string>
    <string name="screen_broad">大屏广播</string>
    <string name="more_features">其他功能</string>
    <string name="jizhong_up">统一上升</string>
    <string name="jizhong_down">统一下降</string>
    <string name="alone_control">单独控制</string>
    <string name="jizhong_lift">升降器</string>
    <string name="jizhong_end">结束会议</string>
    <string name="jizhong_open_machine">开机</string>
    <string name="jizhong_close_machine">关机</string>
    <string name="jizhong_boot_shut">开关机</string>
    <string name="switch_file">切换文档</string>
    <string name="document">文档</string>
    <string name="file_prompt">确认关闭当前电子白板？</string>
    <string name="file_prompt_mutual">确认关闭当前交互白板？</string>
    <string name="pizhu_prompt">确认关闭当前手写批注？</string>
    <string name="jump_page">跳页</string>
    <string name="jump_to">跳至</string>
    <string name="pagenum">页</string>
    <string name="go">GO</string>
    <string name="jizhong_lock">锁大屏</string>
    <string name="jizhong_Unlock">解锁大屏</string>
    <string name="screen_content">正在播放内容</string>
    <string name="screen_loop">循环播放</string>
    <string name="screen_volume">音量</string>
    <string name="screen_jindu">进度</string>
    <string name="screen_go">快进</string>
    <string name="screen_backoff">后退</string>
    <string name="screen_dianbo">大屏点播</string>
    <string name="screen_start">不可用</string>
    <string name="screen_suspend">暂停</string>
    <string name="screen_terminal">广播到终端</string>
    <string name="other_tools">其它工具</string>
    <string name="pen_size">画笔大小</string>
    <string name="pen_color">颜色</string>
    <string name="clear_screen">清屏</string>
    <string name="pen_tools">笔</string>
    <string name="xiangpi_tools">橡皮</string>
    <string name="shut_down">关闭</string>
    <string name="baiban_oneself">个人白板</string>
    <string name="baiban_mutual">交互白板</string>
    <string name="baiban_option">电子白板</string>
    <string name="baiban_itc_oneself">个人电子白板</string>
    <string name="baiban_itc_mutual">交互电子白板</string>
    <string name="document_annotation">文档批注</string>
    <string name="file_gone">文档下载未完成\n请稍后从侧边跟踪主讲</string>
    <string name="file_gone_permission">无同步文档的开启权限</string>
    <string name="file_browse_permission">文档浏览权限已变更</string>
    <string name="baidu_url">http://www.baidu.com</string>
    <string name="comment_cancel">取消</string>
    <string name="comment_sure">确定</string>
    <string name="comment_back">返回</string>
    <string name="meeting_start_sign">开始签到</string>
    <string name="meeting_uniform_sign">统一签到</string>
    <string name="meeting_end_sign">结束签到</string>
    <string name="sign_seat_num">座位号</string>
    <string name="sign_name">姓名</string>
    <string name="sign_person_unit">单位</string>
    <string name="sign_person_position">职位</string>
    <string name="sign_time">签到时间</string>
    <string name="start_broadcast_to_all">开始VGA广播到全部</string>
    <string name="stop_broadcast_to_all">结束VGA广播到全部</string>
    <string name="search">搜索</string>
    <string name="exit">退出</string>
    <string name="joiner_screen">参会人屏幕</string>
    <string name="change_slogan">显示标语</string>
    <string name="exit_slogan">退出标语</string>
    <string name="select_slogan">选择标语</string>
    <string name="meeting_list">会议列表</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_paperless_meeting">退出无纸化会议?</string>
    <string name="error_configuration">打开串口失败:参数错误!</string>
    <string name="error_security">打开串口失败:没有串口读/写权限!</string>
    <string name="error_unknown">打开串口失败:未知错误!</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="tv_lrcg">录入成功</string>
    <string name="entry_fingerprint_tip">将手指放在平板右侧指纹识别器上</string>
    <string name="account_login">账号登录</string>
    <string name="setting_info">配置信息</string>
    <string name="multiple_selection">多选</string>
    <string name="single_selection">单选</string>
    <string name="please_select_voting_options">请选择投票选项</string>
    <string name="voting_notes">投票备注</string>
    <string name="expandableTextView_str">惊世的才华，总归是需要时间，才能消化的。惊世的才能，也总归是需要岁月的风霜与洗礼，方才，能见证的。诗人李白自唐代向我们走来，却也已距离一千三百多年。清朝乾隆年间所编撰，华夏最为健全的一套《四库全书》史集，也向我们走过了两百多年历史。\n有心栽花花不开，无心插柳柳成荫，是被岁月吞噬了?还是一路有被时间、被人心所记录，我们又何处去寻，何处去寻觅，只是无从去考验，无从去验证了而已。因为没有方法，却怎么都是错的。</string>
    <string name="comment_hint">如有投票说明或建议可以填写</string>
    <string name="sign_out">确认退出登录吗?</string>
    <string name="welcome_you">，欢迎您！</string>
    <string name="lost_connection">(离线中...)</string>
    <string name="lost_connection_no_brackets">离线中...</string>
    <string name="all_person_vote1">共</string>
    <string name="all_person_vote2">人参与投票</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_yiti_detail">YitiDetailActivity</string>
    <string name="title_activity_file_browse">FileBrowseActivity</string>
    <string name="shutdown_text">关机</string>
    <string name="shutdown_terminal">关闭所有升降器终端</string>
    <string name="shutdown_server_terminal">关闭服务器与所有升降器终端</string>
    <string name="fill_remarks">请填写投票说明或建议</string>
    <string name="has_not_started">未开始</string>
    <string name="open">开启</string>
    <string name="switch_file_cancel">您已取消文档切换!</string>
    <string name="pdf_null_file">不存在该文件，正在下载文件!</string>
    <string name="pdf_tracking_null_file">不存在该文件，已退出跟踪主讲并为您下载!</string>
    <string name="pdf_file_ready">文件下载已经完成，点击“跟踪主讲”开始同屏!</string>
    <string name="pdf_file_ready_forceTrack">文件下载完成，正在跟踪主讲!</string>
    <string name="pdf_input_right_page">请输入正确页码 1~</string>
    <string name="pdf_input_page">请输入跳转页码</string>
    <string name="open_doc_speak">您已开启主讲!</string>
    <string name="close_doc_speak">确定退出主讲?</string>
    <string name="close_doc_track">确定退出到异步浏览?</string>
    <string name="is_speak"> 正在主讲!</string>
    <string name="is_speak_with_track"> 正在主讲,点击“跟踪主讲”开始同屏!</string>
    <string name="ending_speak">主讲已结束!</string>
    <string name="ending_track">跟踪主讲已结束!</string>
    <string name="null_network">与服务器断开连接</string>
    <string name="success_network">服务器连接已恢复</string>
    <string name="prepare_notice">准备通知</string>
    <string name="net_browse">网络浏览</string>
    <string name="meetserver_input">未发送您的会议服务，取消发送?</string>
    <string name="null_text">当前输入无内容!</string>
    <string name="meetserver_send_success">已成功发送，将通知会议服务人员处理，请稍后…</string>
    <string name="personal_center">个人中心</string>
    <string name="confirm_end_meeting_vote">确认结束会议投票？</string>
    <string name="please_end_vote">当前有启动中的会议投票，请先结束</string>
    <string name="confirm_open_meeting_vote">确认启动会议投票？</string>
</resources>