<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context="com.itc.suppaperless.meetingmodule.fragment.ScreenBroadCastFragment">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_baodcast"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/line_bg">
    </android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tv_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comment_upload_marginleft"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/comment_upload_marginright"
            android:text="@string/screen_content"/>
        <TextView
            android:id="@+id/tv_content"
            android:layout_below="@+id/tv_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comment_upload_marginleft"
            android:layout_marginTop="5dp"
            android:textSize="19sp"
            android:textColor="@color/color_333333"/>

        <TextView
            android:id="@+id/tv_volume_tishi"
            android:layout_below="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comment_upload_marginleft"
            android:layout_marginTop="50dp"
            android:text="@string/screen_volume"
            android:textColor="@color/color_333333"/>
        <TextView
            android:id="@+id/tv_volume"
            android:layout_below="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentRight="true"
            android:text="0"
            android:textColor="@color/color_333333"/>
        <SeekBar
            android:id="@+id/pb_volune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_below="@+id/tv_volume"
            android:max="100"
            android:progress="0"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:focusable="true"
            android:progressDrawable="@drawable/po_seek"
            />
        <TextView
            android:id="@+id/tv_jindu_tishi"
            android:layout_below="@+id/pb_volune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/comment_upload_marginleft"
            android:text="@string/screen_jindu"
            android:textColor="@color/color_333333"/>
        <LinearLayout
            android:id="@+id/ll_jindu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pb_volune"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/tv_jingdu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/color_333333"/>
            <TextView
                android:id="@+id/tv_all_jingdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/0"
                android:textColor="@color/style_all_common_color"/>
        </LinearLayout>
        <SeekBar
            android:id="@+id/pb_jindu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_below="@+id/ll_jindu"
            android:max="100"
            android:progress="0"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:focusable="true"
            android:progressDrawable="@drawable/po_seek"/>
        <TextView
            android:id="@+id/tv_backoff"
            android:layout_below="@+id/pb_jindu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableLeft="@mipmap/dpdb_back_off"
            android:text="@string/screen_backoff"
            android:gravity="center"
            android:drawablePadding="3dp"/>
        <TextView
            android:id="@+id/tv_go"
            android:layout_below="@+id/pb_jindu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/screen_go"
            android:gravity="center"
            android:drawablePadding="3dp"
            android:drawableRight="@mipmap/dpdb_forward"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/tv_dapin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:drawableTop="@mipmap/but_play_h"
                android:drawablePadding="3dp"
                android:text="@string/screen_dianbo" />
            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableTop="@mipmap/but_start_d"
                android:drawablePadding="3dp"
                android:layout_alignParentRight="true"
                android:text="@string/screen_suspend" />
            <TextView
                android:id="@+id/tv_terminal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:drawableTop="@mipmap/but_broadcast_d"
                android:drawablePadding="3dp"
                android:text="@string/screen_terminal" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
